<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/createAccountLogo"
        android:layout_width="444dp"
        android:layout_height="163dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/create_account_logo" />

    <android.support.v7.widget.CardView
        android:layout_width="363dp"
        android:layout_height="428dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/whiteBackgroundColor"
        app:cardElevation="20dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountLogo">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay">


            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/accountDetailsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/account_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="33sp"
                    android:textStyle="italic" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/accountTypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/account_type"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/accountTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/confirm_password"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/personalDetailsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/personal_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="33sp"
                    android:textStyle="italic" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/fNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/first_name"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/lNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/last_name"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/phone"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/address"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/franchise"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etFranchise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />



                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />


                <TextView
                    android:id="@+id/addProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="add a profile image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="33sp"
                    android:textStyle="italic" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />


                <FrameLayout
                    android:layout_width="235dp"
                    android:layout_height="235dp"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center">



                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorPrimary"
                        android:elevation="14dp"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/addPicButton"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/add_small"
                        android:layout_gravity="bottom|end"/>


                </FrameLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />


                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="61dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="220dp"
                    android:background="@drawable/done_button"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <!--
                <TextView
                    android:id="@+id/addCreditCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="select a plan"
                    android:textColor="@color/colorPrimary"
                    android:textSize="33sp"
                    android:textStyle="italic"
                    android:gravity="center"/>

                <Spinner
                    android:id="@+id/planTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Credit Card Number"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etCreditCardNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Security Code"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etSecurityCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Name On Card"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etNameOnCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Expiration Month"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etExpirationMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Expiration Year"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/etExpirationYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                    -->


            </LinearLayout>
        </ScrollView>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>